--- a/res/layout/serch_fragment.xml
+++ b/res/layout/serch_fragment.xml
@@ -29,6 +29,21 @@
         <TableRow
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/serverIpTextEdit"
+                    android:layout_column="0"
+                    android:hint="Server IP address"
+                    android:text="192.168.0.4"
+                    android:layout_span="2"
+                    android:autoText="false"
+                    android:background="#ffffffff"
+                    android:textColor="#ff000000"/>
+        </TableRow>
+        <TableRow
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
